# plain-crud-app

./: CMakeLists.txt  main.cpp
dao/polyclinic/: Polyclinic.cpp  Polyclinic.h
domain/appointment/: Appointment.cpp  Appointment.h
domain/doctor/: Doctor.cpp  Doctor.h
domain/patient/: Patient.cpp  Patient.h
service/registry/: Registry.cpp  Registry.h
util/: Utils.h
